<resources>
    <string name="app_name">Podiactiv</string>
    <string name="description_podiactiv_logo">
        Le pied pour representer lobjectif du projet.
    </string>
    <string name="login">Email</string>
    <string name="user">Utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="save_button">Sauvegarder</string>
    <string name="confirm_password">Confirmation mot de passe</string>
    <string name="entrar">Accéder</string>
    <string name="mot_de_passe_obli">Mot de passe oublié?</string>
    <string name="envoyer">Envoyer</string>
    <string name="titleRecupPassword">Insérer le email pour la récuperation:</string>
    <string name="panier">Panier</string>
    <string name="album">Album</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cr_er_votre_premi_r_scan">Créer votre premiér scan!</string>
    <string name="les_scans_podiactivs_sont_flexibles_pour_construire_des_mod_les_de_pied_en_3d">Les scans Podiactivs sont flexibles pour construire des modèles de pied en 3D</string>
    <string name="nouveau_scan">Nouveau Scan</string>
    <string name="account_config">account config</string>
    <string name="selected_item">Item choisi:</string>

    <string-array name="Tailles">
        <item>32</item>
        <item>34</item>
        <item>36</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
    </string-array>

    //Headings
    <string name="heading_one">Créer une nouvelle compte</string>
    <string name="heading_two">Connectez-vous à votre compte  </string>
    <string name="heading_three">Nouveau scan: vidéo sous tous les angles</string>
    <string name="heading_fourth">Acheter votre semelle</string>

    //Description
    <string name="desc_one">Insérer vos informations pour sinscrire</string>
    <string name="desc_two">Insérer votre email et mot de passe pour se connecter</string>
    <string name="desc_three">Faites une vidéo de la plante de votre pied sous 360°</string>
    <string name="desc_fourth">Aller à onglet album pour continuer les achats</string>

</resources>
